k8strain2/istio/test/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.bl.kutesmart.cn"
    - "test.bl.kutesmart.cn"
  selector:
    istio: ingressgateway
