k8strain2/istio/test/registry-pull-secret.yaml
apiVersion: v1
data:
  .dockerconfigjson: ewoJImF1dGhzIjogewoJCSIxNzIuMTYuNzcuNTM6MzA4ODIiOiB7CgkJCSJhdXRoIjogIllXUnRhVzQ2WVdSdGFXNHhNak09IgoJCX0sCgkJInJlZ2lzdHJ5LmNuLWJlaWppbmcuYWxpeXVuY3MuY29tIjogewoJCQkiYXV0aCI6ICJhM1YwWlhOdFlYSjBjMkU2TVhGaGVrQlhVMWc9IgoJCX0sCgkJInJlZ2lzdHJ5LmNuLWhhbmd6aG91LmFsaXl1bmNzLmNvbSI6IHsKCQkJImF1dGgiOiAiYTNWMFpYTnRZWEowYzJFNk1YRmhla0JYVTFnPSIKCQl9LAogICAgICAgICAgICAgICAgInN3ci5jbi1ub3J0aC00Lm15aHVhd2VpY2xvdWQuY29tIjogewogICAgICAgICAgICAgICAgICAgICAgICAiYXV0aCI6IlkyNHRibTl5ZEdndE5FQkxRekJ [...]
kind: Secret
metadata:
  name: registry-pull-secret
  namespace: test
type: kubernetes.io/dockerconfigjson
